# RoSteALS

./: .gitignore  Embed_Secret.py  README.md  download_models.sh  eval_imagenetc.py  eval_imagenetc_alldatasets.py  inference.py  inference_additional.py  main.py  main_bamfg.py  pyproject.toml  test_StegAE.py  train.py  tutorial_dataset.py  tutorial_train.py
cldm/: ae.py  cldm.py  diffsteg.py  hack.py  logger.py  loss.py  loss_weight_scheduler.py  transformations.py  utils.py
dependencies/: Dockerfile  requirements.txt  requirements2.txt
ldm/models/diffusion/: ddim.py
models/: VQ4_mir.yaml  VQ4_mir_additional.yaml  VQ4_mir_inference.yaml  cldm_v15.yaml
pages/: Extract_Secret.py
prep_data/: mir_train2.csv  mir_val2.csv
tools/: __init__.py  augment_imagenetc.py  base_lmdb.py  ecc.py  eval_metrics.py  fid.py  gradcam.py  hparams.py  image_dataset.py  image_tools.py  imgcap_dataset.py  sifid.py  slack_bot.py
